otpimize the code